Correction on z-index

--- a/app/css/index.scss
+++ b/app/css/index.scss
@@ -106,7 +106,7 @@ h1 {
 	align-items: center;
 	justify-content: space-around;
 	background: linear-gradient(45deg, #3c45f7, #fffddc);
-	z-index: -1;
+	z-index: 0;
 }
 
 .error {
